Try to fix border on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,3 @@
-/* CSS Variables  */
-
 :root {
     --primary: #ddd;
     --dark: #333;
@@ -47,7 +45,6 @@ p {
     line-height:1.6;
 }
 
-
 a {
     text-decoration: none;
     color: var(--dark);
@@ -75,79 +72,19 @@ img {
     grid-gap: 0px;
 }
 
-/*.header {*/
-    /*background: var(--moonstone-blue);*/
-    /*display:grid;*/
-    /*grid-template-columns: 5fr;*/
-    /*margin: 0px 0px;*/
-/*}*/
-
-/*.company {*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-/*}*/
-
-/*.company h1 {*/
-    /*color: var(--tango-pink);*/
-    /*margin-bottom: 0px;*/
-/*}*/
-
-/*.company p {*/
-    /*color: var(--silverpink);*/
-    /*margin-top: 0px;*/
-/*}*/
-
-/*.sticky {*/
-  /*position: fixed;*/
-/*}*/
-
-/*!* Navigation *!*/
-
-/*.main-nav {*/
-    /*!*box-shadow: var(--shadow);*!*/
-/*}*/
-
-/*.main-nav ul {*/
-    /*font-family: Raleway, sans-serif;*/
-    /*margin: 0px 80px;*/
-    /*display: grid;*/
-    /*grid-gap: 10px;*/
-    /*padding:0;*/
-    /*list-style: none;*/
-    /*grid-template-columns: repeat(5, 1fr);*/
-/*}*/
-
-/*.main-nav a {*/
-    /*display: block;*/
-    /*text-decoration: none;*/
-    /*padding: 0rem;*/
-    /*text-align: center;*/
-    /*color: var(--dark);*/
-    /*text-transform: uppercase;*/
-    /*font-size: 1.1rem;*/
-
-/*}*/
-
-/*.main-nav a:hover {*/
-    /*color: var(--silverpink);*/
-/*}*/
-
 .header img {
     width:230px;
 }
 
 .header {
-    background: var(--platinum);
     width:100%;
+    background: var(--platinum);
     display:flex;
     align-items:center;
     justify-content:end;
     margin: 0px 0px;
-    padding: 10px;
+    padding: 0px 10px;
     box-shadow: var(--shadow);
-
 }
 
 .company {
@@ -161,50 +98,31 @@ img {
   position: fixed;
 }
 
-/* Navigation */
-
-.main-nav {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 40px;
-    padding:10px;
-    margin: 0px 200px;
+.topnav {
+  overflow: hidden;
+  /*background-color: #333;*/
 }
 
-.main-nav a {
-}
-
-.main-nav a {
+.topnav a {
     font-family: Raleway, sans-serif;
     list-style: none;
+    float:left;
     display: block;
     text-decoration: none;
-    padding: 0rem;
+    padding: 5px 25px;
     text-align: center;
     color: var(--dark);
     text-transform: uppercase;
     font-size: 1.1rem;
-
 }
 
-.main-nav .icon {
-    display:none;
+.topnav a:hover {
+  color: black;
 }
 
-
-.main-nav a:hover {
-    color: var(--silverpink);
+.topnav .icon {
+  display: none;
 }
-
-
-/*.nav-separator {*/
-    /*background: var(--romansilver);*/
-    /*display:grid;*/
-    /*grid-template-columns: 5fr;*/
-    /*margin: 0px 0px;*/
-    /*box-shadow: var(--shadow);*/
-    /*height: 3px;*/
-/*}*/
 
 .top-container {
     display: grid;
@@ -224,6 +142,7 @@ img {
     display: grid;
     grid-gap:10px;
     grid-template-columns: 5fr;
+    box-shadow: var(--shadow);
 }
 
 .showcase {
@@ -279,13 +198,6 @@ img {
     min-height: 280px;
 }
 
-/*.index-image {*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-content: start;*/
-    /*justify-content: start;*/
-/*}*/
-
 .index-content {
     display: flex;
     flex-direction: column;
@@ -337,29 +249,6 @@ img {
     fill: #3E5641;
 }
 
-.index-image a {
-    text-decoration: none;
-}
-
-.icons-image p {
-    text-decoration: none;
-}
-
-/*.icons-text {*/
-    /*text-align:center;*/
-/*}*/
-
-.blog-gap {
-    min-height:100px;
-    background: url(img/climbing-leaves.jpg);
-
-      /* Create the parallax scrolling effect */
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-}
-
 .showcase h1 {
     font-size: 4rem;
     font-style: bold;
@@ -383,13 +272,13 @@ img {
 .blog-box-background {
     background: url(img/climbing-leaves.jpg);
 
-      /* Create the parallax scrolling effect */
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
       background-size: cover;
+    }
 
-}
 .blog-boxes {
     margin: 50px; 10px;
     display:grid;
@@ -407,7 +296,7 @@ img {
 .blog {
     display:grid;
     grid-gap:40px;
-    margin:50px; 10px;
+    margin: 50px;
     grid-template-columns: 1fr 3fr 1fr;
 }
 
@@ -428,7 +317,7 @@ img {
 .blog-post {
     display:grid;
     grid-gap:40px;
-    margin:50px; 10px;
+    margin: 50px;
     grid-template-columns: 1fr;
 }
 
@@ -438,8 +327,9 @@ img {
     margin:50px; 10px;
     grid-template-columns: 1fr;
 }
+
 .instagram-pics {
-    margin: 50px; 10px;
+    margin: 50px;
     display:grid;
     grid-gap: 15px;
     grid-template-columns: repeat(auto-fit,  215px)
@@ -460,48 +350,6 @@ footer {
     color: var(--dark-jungle-green);
     text-align:center;
     padding: 1rem;
-}
-
-
-.topnav {
-  overflow: hidden;
-  /*background-color: #333;*/
-}
-
-.topnav a {
-
-    font-family: Raleway, sans-serif;
-    list-style: none;
-    float:left;
-    display: block;
-    text-decoration: none;
-    padding: 5px 25px;
-    text-align: center;
-    color: var(--dark);
-    text-transform: uppercase;
-    font-size: 1.1rem;
-
-  /*float: left;*/
-  /*display: block;*/
-  /*color: #f2f2f2;*/
-  /*text-align: center;*/
-  /*padding: 14px 16px;*/
-  /*text-decoration: none;*/
-  /*font-size: 17px;*/
-}
-
-/*.topnav a:hover {*/
-  /*background-color: #ddd;*/
-  /*color: black;*/
-/*}*/
-
-/*.topnav a.active {*/
-  /*background-color: #4CAF50;*/
-  /*color: white;*/
-/*}*/
-
-.topnav .icon {
-  display: none;
 }
 
 @media screen and (max-width: 700px) {
